PSD: fix saving the composed image

The composed image data in Photoshop should be pre-filled with white.

BUG:333300
BUG:333322